# notes-tools

./: .gitignore  AGENTS.md  README.md  decision-log.md  pyproject.toml  uv.toml
autoBlogPost/: agent-notes.md  decision-log.md  invertBlockquotes.py  main.py  pyproject.toml  run.sh  utils.py
autoBlogPost/tests/: test_math_delimiters.py
automation/: agent-notes.md  decision-log.md  run_interactive_codex_session.sh  run_scheduled_codex_skill.sh  strip_context_frontmatter_fields.py
automation/tests/: test_scheduled_codex_sources.py  test_scheduled_error_reporting.py  test_scheduled_message_service.py
gitWordCountHistory/: .gitignore  pyproject.toml
integrate_notes/: .gitignore  TODO.md  agent-notes.md  decision-log.md  pyproject.toml
notes/: agent-notes.md  assistant_convo_state.py  assistant_convos_to_notes.py  auth_telegram_notifs.py  chatgpt_backend_client.mjs  chatgpt_backend_fetch.mjs  chatgpt_convos_to_notes.mjs  chatgpt_html_artifacts.mjs  chatgpt_pending_convos_to_notes.py  config.json  decision-log.md  discord_auth.py  discord_notifs_to_notes.py  ethresearch_social_notifs.py  github_notifs_to_notes.py  lesswrong_social_notifs.py  linear_notifs_to_notes.py  message_notif_logging.py  migrate_note_frontmatter_directives.py  normalize_markdown_filenames.py  notes_utils.py  route_friend_discussion_ideas.py  select_infolio_relevance_articles.py  social_notif_common.py  social_notifs_to_notes.py  telegram_notifs_to_notes.py  x_social_notifs.py
prioritise_habits/: .gitignore  DECISION_LOG.md  agent-notes.md  decision-log.md  pyproject.toml
pull_memos/: .gitignore  agent-notes.md  decision-log.md  keep_auth.py  pullTempNotes.py  pyproject.toml
pull_memos/tests/: test_keep_auth.py  test_pull_temp_notes.py
syncToGist/: .gitignore  agent-notes.md  bookmarksSync.py  decision-log.md  notesSync.py  pyproject.toml  teleportWikilinks.py  utils.py
syncToGist/tests/: test_notes_sync.py
zk_indexer/: .gitignore  agent-notes.md  pyproject.toml
(+37 files in other folders)
