[project]
name = "notes-tools"
version = "0.1.0"
description = "Automation and utilities for the notes repository."
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "browser-cookie3>=0.20.1",
    "loguru>=0.7.2,<0.8.0",
    "requests>=2.32.3",
    "telethon>=1.42.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["notes"]
testpaths = ["notes/tests", "automation/tests"]

