[project]
name = "autoBlogPost"
version = "0.1.0"
description = ""
dependencies = [
    "python-dotenv",
    "loguru",
    "PySnooper",
    "requests",
    "python-frontmatter>=1.1.0",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
