[project]
name = "pull-memos"
version = "0.1.0"
description = "Pull Google Keep notes and recorded voice memos into local temp notes."
dependencies = [
    "python-dotenv>=1.0.1,<2.0.0",
    "loguru>=0.7.2,<0.8.0",
    "gkeepapi>=0.16.0",
    "pydub>=0.25.1",
    "openai>=2.0.0",
    "send2trash>=1.8.3",
    "audioop-lts>=0.2.1",
    "pytest>=9.0.2",
]
requires-python = ">=3.13"
license = {text = "UNLICENCE"}
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
