[project]
name = "synctogist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.0.1",
    "python-frontmatter>=1.1.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
